# tulcz-stin-2024

./: .gitignore  README.txt
.github/workflows/: fastapi_deploy.yml  pylint.yml  pytest.yml
docs/: DSP.txt
fastapi/: .gitignore  Dockerfile  pyproject.toml
fastapi/ansible/: deploy.yml  inventory.ini
fastapi/ansible/roles/deploy_app/defaults/: main.yml
fastapi/ansible/roles/deploy_app/tasks/: main.yml
fastapi/ansible/roles/prune_images/tasks/: main.yml
fastapi/weather_app/: errors.py  main.py
fastapi/weather_app/routers/api/: v1.py  weather.py
fastapi/weather_app/services/: cache.py  thread.py  weather.py
fastapi/weather_app/tests/routers/api/: weather.py
fastapi/weather_app/tests/services/: test_cache.py
