[tool.poetry]
name = "tulcz-stin-2024"
version = "1.0.0"
description = "Weather web application for semestral work for STIN 2024 at TUL"
authors = ["German Semin <german.semin@tul.cz>"]
license = "GPL-3.0-or-later"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pyowm = "^3.3.0"
setuptools = "^69.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pylint = "^3.2.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
